objects/ssot__SalesOrderProductPriceAdjustmentTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Product Price Adjustment Tax</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProdtPriceAdjTaxAmount__c</fullName>
        <label>Sales Order Prodt Price Adj Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjustmentId__c</fullName>
        <label>Sales Order Product Price Adjustment</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxId__c</fullName>
        <label>Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218001_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductPriceAdjustmentTax__rel</label>
        <referenceTo>ssot__Tax__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductPriceAdjustmentTax__rel</relationshipLabel>
        <relationshipName>rel_1697761218001_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218778_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductPriceAdjustmentTax__rel</label>
        <referenceTo>ssot__SalesOrderProductPriceAdjustment__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductPriceAdjustmentTax__rel</relationshipLabel>
        <relationshipName>rel_1697761218778_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>